# CppNet-Client

./: .gitignore  .gitmodules  AI-GUIDE.md  CMakeLists.txt  README.md  main.cpp
core/: NetworkClient.cpp  NetworkClient.h  Protocol.cpp  Protocol.h
draft/: CMakeLists.txt  test_AuthService.cpp  test_EchoService.cpp  test_FileUploadService.cpp  test_decode.cpp  test_network_client.cpp  test_protocol.cpp  test_server.cpp  test_socket.cpp
services/: AuthService.cpp  AuthService.h  EchoService.cpp  EchoService.h  FileUploadService.cpp  FileUploadService.h
